// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproTextArea > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-textarea
    d-flex
    flex-column
    flex-md-row
    modified-classes
  "
  id="modified-unique-id-container"
  style="
    margin-bottom: 12px;
    max-width: 300px;
    min-width: 100px;
    width: 200px;
  "
>
  <div class="
    align-start
    d-inline-flex
    mr-md-2
    mt-md-2
  ">
    <label
      class="
        amelipro-textarea__label
        mr-2
      "
      for="modified-unique-id"
      id="modified-unique-id-label"
      style="
        max-width: 120px;
        min-width: 60px;
      "
    >
      Modified label
      <span>
        <span aria-hidden="true">
          &nbsp;*
        </span>
        <span class="d-sr-only">
          &nbsp;Champ obligatoire
        </span>
      </span>
    </label>
  </div>
  <v-textarea-stub
    active="false"
    aria-describedby="modified-unique-id-error"
    aria-required="true"
    autofocus="false"
    autogrow="true"
    bgcolor="ap-grey-lighten-2"
    class="amelipro-textarea-input"
    clearable="false"
    clearicon="$clear"
    color="ap-blue-darken-1"
    counter="100"
    density="default"
    details="false"
    direction="horizontal"
    dirty="false"
    disabled="true"
    error="false"
    errormessages=""
    flat="false"
    focused="false"
    glow="false"
    hidedetails="false"
    hidespinbuttons="false"
    iconcolor="false"
    id="modified-unique-id"
    loading="false"
    maxerrors="1"
    messages=""
    modelvalue="Modified model value"
    noresize="false"
    persistentclear="false"
    persistentcounter="false"
    persistenthint="false"
    persistentplaceholder="false"
    readonly=""
    reverse="false"
    rows="5"
    rules="() => true,(value) => {
    let valid;
    if (Array.isArray(value)) {
      valid = value.length !== 0;
    } else {
      valid = Boolean(typeof value === "string" ? value.trim() : value);
    }
    return valid || __vite_ssr_import_0__.ruleMessage(errorMessages, "default");
  }"
    singleline="false"
    style="
      max-width: 150px;
      min-width: 50px;
      background-color: transparent;
    "
    tile="false"
    validateon="input"
    variant="outlined"
  ></v-textarea-stub>
</div>
`;

exports[`AmeliproTextArea > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="
    amelipro-textarea
    d-flex
    flex-column
  "
  id="required-unique-id-container"
  style="margin-bottom: 12px;"
>
  <div class="
    align-start
    d-inline-flex
  ">
    <label
      class="
        amelipro-textarea__label
        mr-2
      "
      for="required-unique-id"
      id="required-unique-id-label"
    >
      Required label
      <!-- v-if -->
    </label>
  </div>
  <v-textarea-stub
    active="false"
    aria-describedby="required-unique-id-error"
    aria-required="false"
    autofocus="false"
    autogrow="true"
    bgcolor="ap-white"
    class="amelipro-textarea-input"
    clearable="false"
    clearicon="$clear"
    color="ap-blue-darken-1"
    counter="255"
    density="default"
    details="false"
    direction="horizontal"
    dirty="false"
    disabled="false"
    error="false"
    errormessages=""
    flat="false"
    focused="false"
    glow="false"
    hidedetails="false"
    hidespinbuttons="false"
    iconcolor="false"
    id="required-unique-id"
    loading="false"
    maxerrors="1"
    messages=""
    noresize="false"
    persistentclear="false"
    persistentcounter="false"
    persistenthint="false"
    persistentplaceholder="false"
    reverse="false"
    rows="5"
    rules=""
    singleline="false"
    tile="false"
    variant="outlined"
  ></v-textarea-stub>
</div>
`;

exports[`AmeliproTextArea > render correctly 1`] = `
<div
  class="
    amelipro-textarea
    d-flex
    flex-column
  "
  id="my-textarea-id-container"
  style="margin-bottom: 12px;"
>
  <div class="
    align-start
    d-inline-flex
  ">
    <label
      class="
        amelipro-textarea__label
        mr-2
      "
      for="my-textarea-id"
      id="my-textarea-id-label"
    >
      Mon label
      <!-- v-if -->
    </label>
  </div>
  <div class="
    amelipro-textarea-input
    v-input
    v-input--density-default
    v-input--horizontal
    v-locale--is-ltr
    v-text-field
    v-textarea
    v-textarea--auto-grow
    v-textarea--no-resize
    v-theme--light
  ">
    <!---->
    <div class="v-input__control">
      <div class="
        bg-ap-white
        v-field
        v-field--has-background
        v-field--no-label
        v-field--variant-outlined
        v-locale--is-ltr
        v-theme--light
      ">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div
            aria-hidden="true"
            aria-valuemax="100"
            aria-valuemin="0"
            class="
              v-locale--is-ltr
              v-progress-linear
              v-theme--light
            "
            role="progressbar"
            style="
              top: 0px;
              height: 0px;
              --v-progress-linear-height: 2px;
            "
          >
            <!---->
            <div
              class="v-progress-linear__background"
              style="opacity: NaN;"
            ></div>
            <div
              class="v-progress-linear__buffer"
              style="
                opacity: NaN;
                width: 0%;
              "
            ></div>
            <transition-stub
              appear="false"
              css="true"
              name="fade-transition"
              persisted="false"
            >
              <div class="v-progress-linear__indeterminate">
                <div class="
                  long
                  v-progress-linear__indeterminate
                "></div>
                <div class="
                  short
                  v-progress-linear__indeterminate
                "></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <div
          class="v-field__field"
          data-no-activator=""
        >
          <!---->
          <!---->
          <!---->
          <textarea
            aria-describedby="my-textarea-id-error"
            aria-required="false"
            class="v-field__input"
            id="my-textarea-id"
            rows="5"
          ></textarea>
          <textarea
            aria-hidden="true"
            class="
              v-field__input
              v-textarea__sizer
            "
            id="my-textarea-id-sizer"
            readonly=""
          ></textarea>
          <!---->
        </div>
        <!---->
        <!---->
        <div class="v-field__outline">
          <div class="v-field__outline__start"></div>
          <!---->
          <div class="v-field__outline__end"></div>
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div
      aria-live="polite"
      class="v-input__details"
      id="my-textarea-id-messages"
      role="alert"
    >
      <transition-group-stub
        appear="false"
        class="v-messages"
        css="true"
        name="slide-y-transition"
        persisted="false"
        tag="div"
      >
        <!---->
      </transition-group-stub>
      <!---->
      <span></span>
      <transition-stub
        appear="false"
        css="true"
        name="slide-y-transition"
        persisted="false"
      >
        <div
          class="v-counter"
          style="display: none;"
        >
          0 / 255
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
